# live2.0

./: .gitignore  Cargo.toml  icon.rc  live2.0.code-workspace
docs/: .todo  changelog.md  roadmap.md
src/: agent.rs  camera.rs  consts.rs  element.rs  event.rs  jet.rs  kinetic.rs  main copy.rs  main.rs  num.rs  particle.rs  prelude.rs  sim.rs  source.rs  ui.rs  util.rs  world.rs
