[package]
name = "live2"
version = "0.2.7"
edition = "2021"
authors = ["Artur Gwoździowski"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
parry2d = "0.13.4"
nalgebra = { version = "0.32.2", features = ["convert-glam020"] }
glam = "0.24.0"
egui-macroquad = "0.15.0"
egui = "0.21.0"
egui_extras = "0.21.0"
image = { version = "0.24", features = ["jpeg", "png"] }
rand = "0.8.5"

[build-dependencies]
embed-resource = "2.1.1"
